feat(auth): enhance security and auth endpoints
- Switch authentication principal in endpoints to extract user directly from DB

- Handle tokens seamlessly with cookies

- Add specific exceptions and adjust secure headers for endpoints